[gd_scene load_steps=16 format=2]

[ext_resource path="res://gui/GUI.gd" type="Script" id=1]
[ext_resource path="res://gui/Inventory.tscn" type="PackedScene" id=2]
[ext_resource path="res://gui/Map.tscn" type="PackedScene" id=3]
[ext_resource path="res://gui/Progress.tscn" type="PackedScene" id=4]
[ext_resource path="res://gui/CastingBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://gui/MiniMap.tscn" type="PackedScene" id=6]
[ext_resource path="res://gui/SkillBar.tscn" type="PackedScene" id=7]
[ext_resource path="res://gui/Equipment.tscn" type="PackedScene" id=8]
[ext_resource path="res://gui/LootPanel.tscn" type="PackedScene" id=9]
[ext_resource path="res://gui/ExperienceBar.tscn" type="PackedScene" id=10]
[ext_resource path="res://gui/QuantityPanel.tscn" type="PackedScene" id=11]
[ext_resource path="res://gui/SkillPanel.tscn" type="PackedScene" id=12]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform sampler2D mask_texture;

void fragment() {
    vec4 colour = texture(TEXTURE, UV);
    colour.a *= texture(mask_texture, UV).a;

    COLOR = colour;
}"

[sub_resource type="StreamTexture" id=2]
flags = 4

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/mask_texture = SubResource( 2 )

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 178.0
mouse_filter = 2
size_flags_vertical = 3
alignment = 1

[node name="Progress" parent="VBoxContainer/Top" instance=ExtResource( 4 )]
size_flags_vertical = 0

[node name="TargetProgress" parent="VBoxContainer/Top" instance=ExtResource( 4 )]
visible = false
margin_left = 533.0
margin_right = 747.0
grow_horizontal = 2
size_flags_horizontal = 10
size_flags_vertical = 0

[node name="MiniMap" parent="VBoxContainer/Top" instance=ExtResource( 6 )]
material = SubResource( 3 )
anchor_left = 0.0
anchor_right = 0.0
margin_left = 1130.0
margin_right = 1280.0
margin_bottom = 150.0
size_flags_horizontal = 10
size_flags_vertical = 0

[node name="Center" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 178.0
margin_right = 1280.0
margin_bottom = 624.0
mouse_filter = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="CenterContainer" parent="VBoxContainer/Center"]
margin_right = 462.0
margin_bottom = 446.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="SkillPanel" parent="VBoxContainer/Center/Left" instance=ExtResource( 12 )]
visible = false
margin_left = 224.0
margin_top = 216.0
margin_right = 238.0
margin_bottom = 230.0

[node name="Center" type="CenterContainer" parent="VBoxContainer/Center"]
margin_left = 466.0
margin_right = 813.0
margin_bottom = 446.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5

[node name="Equipment" parent="VBoxContainer/Center/Center" instance=ExtResource( 8 )]
visible = false
margin_left = 166.0
margin_top = 216.0
margin_right = 180.0
margin_bottom = 230.0

[node name="Right" type="CenterContainer" parent="VBoxContainer/Center"]
margin_left = 817.0
margin_right = 1280.0
margin_bottom = 446.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="Inventory" parent="VBoxContainer/Center/Right" instance=ExtResource( 2 )]
visible = false
margin_left = 224.0
margin_top = 216.0
margin_right = 238.0
margin_bottom = 230.0

[node name="Bottom" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 624.0
margin_right = 1280.0
margin_bottom = 714.0
mouse_filter = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
alignment = 1

[node name="Quickbar" parent="VBoxContainer/Bottom" instance=ExtResource( 7 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 633.0
margin_top = 76.0
margin_right = 647.0
margin_bottom = 90.0
size_flags_vertical = 10

[node name="ExperienceBar" parent="VBoxContainer" instance=ExtResource( 10 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 714.0
margin_right = 1280.0
margin_bottom = 720.0

[node name="Map" parent="." instance=ExtResource( 3 )]
visible = false

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_top = 100
custom_constants/margin_bottom = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_top = 100.0
margin_right = 1280.0
margin_bottom = 620.0
mouse_filter = 2

[node name="LootPanel" parent="MarginContainer/CenterContainer" instance=ExtResource( 9 )]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 640.0
margin_top = 260.0
margin_right = 640.0
margin_bottom = 260.0
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer"]
margin_top = 100.0
margin_right = 1280.0
margin_bottom = 620.0
mouse_filter = 2

[node name="QuantityPanel" parent="MarginContainer/CenterContainer2" instance=ExtResource( 11 )]
visible = false
margin_left = 633.0
margin_top = 253.0
margin_right = 647.0
margin_bottom = 267.0
size_flags_vertical = 6

[node name="Center" type="VBoxContainer" parent="MarginContainer"]
margin_top = 100.0
margin_right = 1280.0
margin_bottom = 620.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CastingBar" parent="MarginContainer/Center" instance=ExtResource( 5 )]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 540.0
margin_top = 500.0
margin_right = 740.0
margin_bottom = 520.0
rect_min_size = Vector2( 200, 20 )
size_flags_horizontal = 4
size_flags_vertical = 10
